create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2346,6 +2346,198 @@ body {
 .cid-qUftW9phba .card-img {
   text-align: center;
 }
+.cid-qVYJ2cnNXg {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-qVYJ2cnNXg .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-qVYJ2cnNXg H2 {
+  color: #f3cb47;
+}
+.cid-qVYIYh3iis {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #2e2e2e;
+}
+.cid-qVYIYh3iis .counter-container {
+  color: #767676;
+}
+.cid-qVYIYh3iis .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qVYIYh3iis .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qVYIYh3iis .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border-radius: 0;
+  content: '✓';
+}
+.cid-qVYIYh3iis .mbr-text UL {
+  color: #cccccc;
+}
+.cid-qVYS1RF6uU {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #465052;
+}
+.cid-qVYS1RF6uU .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-qVYS1RF6uU H2 {
+  color: #f3cb47;
+}
+.cid-qVYTq1Zz46 {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #465052;
+}
+.cid-qVYTq1Zz46 .counter-container {
+  color: #767676;
+}
+.cid-qVYTq1Zz46 .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qVYTq1Zz46 .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qVYTq1Zz46 .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border-radius: 0;
+  content: '✓';
+}
+.cid-qVYTq1Zz46 .mbr-text UL {
+  color: #ffffff;
+}
+.cid-qVYVrHJq5f {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-qVYVrHJq5f .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-qVYVrHJq5f H2 {
+  color: #cccccc;
+}
+.cid-qVYVsf2QKV {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #2e2e2e;
+}
+.cid-qVYVsf2QKV .counter-container {
+  color: #767676;
+}
+.cid-qVYVsf2QKV .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qVYVsf2QKV .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qVYVsf2QKV .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border-radius: 0;
+  content: '✓';
+}
+.cid-qVYVsf2QKV .mbr-text UL {
+  color: #ffffff;
+}
+.cid-qVYY78nXSH {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #465052;
+}
+.cid-qVYY78nXSH .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-qVYY78nXSH H2 {
+  color: #e4d295;
+}
+.cid-qVYY6c1xTG {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #465052;
+}
+.cid-qVYY6c1xTG .counter-container {
+  color: #767676;
+}
+.cid-qVYY6c1xTG .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qVYY6c1xTG .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qVYY6c1xTG .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border-radius: 0;
+  content: '✓';
+}
+.cid-qVYY6c1xTG .mbr-text UL {
+  color: #ffffff;
+}
 .cid-qUkF1MySYE {
   padding-top: 60px;
   padding-bottom: 0px;
